# hwdjango

./: .gitignore  Dockerfile  Dockerfile.celery  README.md  diagrams.graffle  docker-compose.yml  entrypoint.sh  entrypoint_celery.sh  pyproject.toml
flatapp/: celerybeat-schedule  manage.py
flatapp/flatapp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
flatapp/flats/: admin.py  forms.py  models.py  tasks.py  test_views.py  tests.py  views.py
flatapp/flats/migrations/: 0001_initial.py  0002_alter_flat_flat_address.py  0003_auto_20210601_2036.py  0004_auto_20210601_2115.py  0005_auto_20210602_0816.py  0006_rename_synced_metervalues_mv_synced.py  0007_flat_users.py
flatapp/flats/templates/: base.html  formset_snippet.html  index.html
flatapp/flats/templates/flats/: about.html  create.html  flat.html  index.html  update.html
flatapp/flats/templates/meters/: create.html  update.html
flatapp/flats/templates/metertypes/: create.html  delete_confirm.html  index.html  update.html
flatapp/flats/templates/providers/: create.html  delete_confirm.html  index.html  update.html
flatapp/flats/templates/providertypes/: delete_confirm.html  index.html  update.html
flatapp/flats/templates/tasks/: index.html
flatapp/providers/: __init__.py  zhilmos.py
flatapp/templates/: base.html
flatapp/users/templates/registration/: login.html  password_change_done.html  password_change_form.html
